--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Run RuboCop
       run: bundle exec rubocop
     - name: Run Bundler Audit
-      run: bundle-audit check --update
+      run: bundle audit check --update
     - name: Run tests
       env:
         GOOGLE_ACCOUNT_TYPE: ${{ secrets.GOOGLE_ACCOUNT_TYPE }}
